chore: fix legacy logic and cleanup code style and handle errors more gracefully