@@ -16,7 +16,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class SRVelocityCommand<C> implements RawCommand {
 
@@ -53,7 +52,7 @@ public class SRVelocityCommand<C> implements RawCommand {
                 .map(Suggestion::suggestion)
                 .map(suggestion -> StringUtils.trimBeforeLastSpace(suggestion, result.commandInput()))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
